<resources>
    <string name="logo_desc" translatable="false">app logo</string>
    <string name="settings" translatable="false">settings</string>
    <string name="tReminderText" translatable="false">"It's T time innit"</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="welcome_back" translatable="false">Welcome back</string>
    <string name="close_popup" translatable="false">close popup</string>
    <string name="it_started" translatable="false">It started</string>
    <string name="home_button_name">Home</string>
    <string name="account_button_name">Settings</string>
    <string name="add_button_text">Add</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="app_name">Rainbow Calendar</string>
    <string name="app_name1" translatable="false">Shark Track</string>
    <string name="stealth_app_name" translatable="false">Shark Idle 2</string>
    <string name="welcome_text">Welcome to Shark Tracker</string>
    <string-array name="themes_array" translatable="false">
        <item>White</item>
        <item>Gray</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Navy Blue</item>
        <item>Green</item>
        <item>Dark Purple</item>
        <item>Khaki</item>
        <item>Purple</item>
        <item>Beige</item>
    </string-array>
    <string name="metrics_crampLevelTitle">Cramp Level</string>
    <string name="metrics_crampLevel0">No cramps</string>
    <string name="metrics_crampLevel1">Mild cramps</string>
    <string name="metrics_crampLevel2">Severe cramps</string>
    <string name="metrics_headacheTitle">Headache</string>
    <string name="metrics_headache0">No headache</string>
    <string name="metrics_headache1">Mild headache</string>
    <string name="metrics_headache2">Moderate headache</string>
    <string name="metrics_headache3">Severe headache</string>
    <string name="metrics_headache4">Unbearable headache</string>
    <string name="metrics_energyLevelTitle">Energy level</string>
    <string name="metrics_energyLevel0">Exhausted</string>
    <string name="metrics_energyLevel1">Low Energy</string>
    <string name="metrics_energyLevel2">Moderate energy</string>
    <string name="metrics_energyLevel3">High energy</string>
    <string name="metrics_energyLevel4">Energized</string>
    <string name="metrics_SleepQualityTitle">Sleep Quality</string>
    <string name="metrics_sleepQuality0">Poor</string>
    <string name="metrics_sleepQuality1">Average</string>
    <string name="metrics_sleepQuality2">Restful</string>
    <string name="metrics_CravingsTitle">Cravings</string>
    <string name="metrics_cravings0">No Cravings</string>
    <string name="metrics_cravings1">Mild Cravings</string>
    <string name="metrics_cravings2">Strong Cravings</string>
    <string name="metrics_SkinConditionTitle">Skin Condition</string>
    <string name="metrics_skinCondition0">Clear Skin</string>
    <string name="metrics_skinCondition1">Moderate Acne</string>
    <string name="metrics_skinCondition2">Severe Acne</string>
    <string name="metrics_DigestiveIssuesTitle">Digestive Issues</string>
    <string name="metrics_digestiveIssues0">No Issues</string>
    <string name="metrics_digestiveIssues1">Mild Issues</string>
    <string name="metrics_digestiveIssues2">Moderate Issues</string>
    <string name="metrics_digestiveIssues3">Severe Issues</string>
    <string name="metrics_MoodSwingsTitle">Mood Swings</string>
    <string name="metrics_moodSwings0">Stable Mood</string>
    <string name="metrics_moodSwings1">Mild Swings</string>
    <string name="metrics_moodSwings2">Intense Swings</string>
    <string name="metrics_OverallMoodTitle">Overall Mood</string>
    <string name="metrics_overallMood0">Awful</string>
    <string name="metrics_overallMood1">Bad</string>
    <string name="metrics_overallMood2">OK</string>
    <string name="metrics_overallMood3">Good</string>
    <string name="metrics_overallMood4">Great</string>
    <string name="metrics_DysphoriaTitle">Dysphoria</string>
    <string name="metrics_dysphoria0">No Dysphoria</string>
    <string name="metrics_dysphoria1">Mild Discomfort</string>
    <string name="metrics_dysphoria2">Discomfort</string>
    <string name="metrics_dysphoria3">Intense Dysphoria</string>
    <string name="metrics_dysphoria4">Unbearable Dysphoria</string>
    <string name="metrics_BleedingTitle">Bleeding Amount</string>
    <string name="metrics_bleeding0">No Bleeding</string>
    <string name="metrics_bleeding1">Spotting</string>
    <string name="metrics_bleeding2">Light Bleeding</string>
    <string name="metrics_bleeding3">Normal</string>
    <string name="metrics_bleeding4">Heavy Bleeding</string>
    <string name="metrics_MusclePainTitle">Muscle/Back Pain</string>
    <string name="metrics_musclePain0">No Pain</string>
    <string name="metrics_musclePain1">Mild Pain</string>
    <string name="metrics_musclePain2">Severe Pain</string>
    <string name="save">Save</string>
    <string name="weight">Weight</string>
    <string name="notes">Notes</string>
    <string name="kcal_balance">Kcal Balance</string>
    <string name="metrics">Metrics</string>
    <string name="stealth_mode">Toggle stealth mode</string>
    <string-array name="recoveryQuestions">
        <item>Select a question.</item>
        <item>What was your childhood career?</item>
        <item>What is your grandmother’s maiden name?</item>
        <item>What is a phrase you live by?</item>
        <item>What was the first band you saw live?</item>
        <item>What brand was your first phone?</item>
        <item>Who was the first person you kissed?</item>
        <item>What was the size of your first shoe?</item>
        <item>What time were you born at?</item>
        <item>What street did your best friend live on during childhood?</item>
        <item>What was the first album you ever purchased?</item>
        <item>What is the flavor of your favorite ice cream?</item>
        <item>Who won when you went to your first sports game?</item>
        <item>Where did you have your first ever flight to?</item>
        <item>What was subject you hated the most in high school?</item>
        <item>What was the name of your favorite video game as a teen?</item>
        <item>What was the color of your favorite childhood blanket?</item>
        <item>What was the title of the first book you read?</item>
        <item>Who was your first crush?</item>
        <item>What was the first dish you learned?</item>
        <item>What was the name/nickname of your least favorite teacher?</item>
        <item>What is the middle name of your oldest cousin?</item>
        <item>In what city or town did your parents meet?</item>
    </string-array>
    <string name="langEnglishLocal" translatable="false">English</string>
    <string name="langFrenchLocal" translatable="false">Français</string>
    <string name="langPortugueseBRLocal" translatable="false">Português</string>
    <string name="langRussianLocal" translatable="false">Русский</string>
    <string name="langUkrainianLocal" translatable="false">українська</string>
    <string name="langPolishLocal" translatable="false">Polski</string>
    <string name="language">Language</string>
    <string name="langEnglish">English</string>
    <string name="langFrench">French</string>
    <string name="langPortugueseBR">Portuguese(BR)</string>
    <string name="langRussian">Russian</string>
    <string name="langUkrainian">Ukrainian</string>
    <string name="langPolish">Polish</string>
    <string name="answer_recovery_questions">Answer recovery questions</string>
    <string name="create_password">Create a password</string>
    <string name="create_pin">Create a pin</string>
    <string name="dont_want_password">I don\'t want to use password</string>
    <string name="enter_answer">Enter answer</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_pin">Enter pin</string>
    <string name="enter_pin_again">Enter pin again</string>
    <string name="password">password</string>
    <string name="password_length_error">Password must be at least 6 characters.</string>
    <string name="password_pin_password">Pin password</string>
    <string name="password_repeat">Enter same password again</string>
    <string name="password_text_password">Text password</string>
    <string name="password_type_title">Choose password type</string>
    <string name="password_warning">Remember this password!\nApp isn\'t connected to cloud, if you forget it, you\'ll lose all data!</string>
    <string name="passwords_different_error">Passwords aren\'t the same</string>
    <string name="pin_length_error">Wrong pin length</string>
    <string name="pins_different_error">Pins are different, try again</string>
    <string name="recovery_answer_all">Answer all 3 questions</string>
    <string name="recovery_answer_empty">Answers can\'t be empty</string>
    <string name="recovery_choose_all">Choose all 3 questions</string>
    <string name="recovery_noquestion_error">If you don\'t see a question, there has been an error</string>
    <string name="recovery_questions_repeat">Questions can\'t repeat</string>
    <string name="recovery_setup_title">Set up recovery questions</string>
    <string name="recovery_wrong_answer">"Wrong answer to question"</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_password_wait">Wrong password 3 times, wait 30 seconds before next attempt</string>
    <string name="enter">Enter</string>
    <string name="password_confirm_type">Confirm password type</string>
    <string name="password_show">temporarily show password</string>
    <string name="pin_circle_description">circle indicating if digit has been set</string>
    <string name="pin_delete_description">delete pin character</string>
    <string name="pin_enter_description">enter pin and proceed</string>
    <string name="wrong_pin_try_again">Wrong pin, try again</string>
    <string name="genderTransMan">Trans man</string>
    <string name="genderNB">Non binary</string>
    <string name="genderWoman">Woman</string>
    <string name="tmanDescription">trans man, T/transition options will be available</string>
    <string name="nbDescription">non-binary, other, T/transition options will be available</string>
    <string name="womanDescription">woman, T/transition options WILL NOT be available</string>
    <string name="noGenderNeutral">Sorry, gender-neutral mode isn\'t available for this language yet, if you need it, choose english instead</string>
    <string name="noGenderNeutralSuggestion">you can send a suggestion once you\'ve completed setup</string>
    <string name="go_to_language_screen">Go to language screen</string>
    <string name="yourIdentityHeader">Your identity</string>
    <string name="chooseMostFittingOption">Choose the most fitting option</string>
    <string name="useStealthModeQuestion">Use "stealth mode"?</string>
    <string name="stealthModeDescription">App will appear as "Shark Idle 2" and notifications will be discreet.</string>
    <string name="censorPeriodQuestion">Do you want to use term "shark week" instead of period?"</string>
    <string name="usePeriod">Use "period"</string>
    <string name="useCensorPeriod">Use shark week</string>
    <string name="errorUnknown">Something went wrong sorry</string>
    <string name="chooseAppTheme">Choose app theme</string>
    <string name="nameIsEmptyError">name can\'t be left empty</string>
    <string name="intervalIsEmptyError">interval can\'t be empty</string>
    <string name="lastDoseIsEmptyError">last dose date can\'t be empty</string>
    <string name="intervalNotANumberError">Interval should be a whole number greater than 0</string>
    <string name="birthControlQuestion">Are you currently taking birth control?</string>
</resources>