<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordActivity">

    <LinearLayout
        android:id="@+id/passwordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30sp"
            android:gravity="center"
            android:text="@string/enter_password"
            android:textSize="40sp" /> <!--text different depending on type of password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/eyeShowPassword"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/icon_eye_closed"
                android:contentDescription="temporarily show password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="30sp" />

            <Button
                android:id="@+id/passwordEnterButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:background="@drawable/icon_login_door"
                android:contentDescription="enter the app" />
        </LinearLayout>

        <TextView
            android:id="@+id/repeatPasswordHeader"
            android:layout_marginTop="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter same password again"
            android:textSize="30sp"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_marginTop="10sp"
            android:visibility="visible"
            android:id="@+id/passwordConfirm"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="30sp" />


    </LinearLayout> <!--password-->

    <LinearLayout
        android:id="@+id/pinCodeL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/pinMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:gravity="center"
            android:text="@string/enter_pin"
            android:textSize="40sp" />

        <LinearLayout
            android:id="@+id/pinDigitsL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pinDigit1"
                style="@style/PinDigit"
                android:contentDescription="@string/pin_circle_description" />

            <ImageView
                android:id="@+id/pinDigit2"
                style="@style/PinDigit"
                android:contentDescription="@string/pin_circle_description" />

            <ImageView
                android:id="@+id/pinDigit3"
                style="@style/PinDigit"
                android:contentDescription="@string/pin_circle_description" />

            <ImageView
                android:id="@+id/pinDigit4"
                style="@style/PinDigit"
                android:contentDescription="@string/pin_circle_description" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="25sp"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/pinButton1"
                style="@style/ButtonPin"
                android:layout_row="0"
                android:layout_column="0"
                android:text="1"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton2"
                style="@style/ButtonPin"
                android:layout_row="0"
                android:layout_column="1"
                android:text="2"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton3"
                style="@style/ButtonPin"
                android:layout_row="0"
                android:layout_column="2"
                android:text="3"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton4"
                style="@style/ButtonPin"
                android:layout_row="1"
                android:layout_column="0"
                android:text="4"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton5"
                style="@style/ButtonPin"
                android:layout_row="1"
                android:layout_column="1"
                android:text="5"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton6"
                style="@style/ButtonPin"
                android:layout_row="1"
                android:layout_column="2"
                android:text="6"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton7"
                style="@style/ButtonPin"
                android:layout_row="2"
                android:layout_column="0"
                android:text="7"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton8"
                style="@style/ButtonPin"
                android:layout_row="2"
                android:layout_column="1"
                android:text="8"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinButton9"
                style="@style/ButtonPin"
                android:layout_row="2"
                android:layout_column="2"
                android:text="9"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinDel"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@drawable/icon_backspace"
                android:contentDescription="@string/pin_delete_description" />

            <Button
                android:id="@+id/pinButton0"
                style="@style/ButtonPin"
                android:layout_row="3"
                android:layout_column="1"
                android:text="0"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/pinEnter"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:background="@drawable/icon_checkmark_circle"
                android:contentDescription="@string/pin_enter_description" />

        </GridLayout>


    </LinearLayout> <!-- pin -->

    <Button
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:id="@+id/buttonCreatePassword"
        android:background="@drawable/icon_checkmark_circle"
        android:layout_gravity="end"
        android:layout_marginEnd="30sp"
        android:layout_marginVertical="20sp"
        />

    <TextView
        android:textColor="@color/red"
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp" />

</LinearLayout>