<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryActivity">

    <LinearLayout
        android:id="@+id/recoverySetupL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/recoverySetupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:gravity="center"
            android:text="@string/recovery_setup_title"
            android:textSize="35sp" />

        <Spinner
            android:id="@+id/recoverySpinner1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30sp"
            android:labelFor="@id/recoverySetupET1"
            android:layout_marginTop="20dp" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoverySetupET1"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />

        <Spinner
            android:id="@+id/recoverySpinner2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoverySetupET2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />

        <Spinner
            android:id="@+id/recoverySpinner3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoverySetupET3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />

        <Button
            android:id="@+id/recoverySetupButton"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_gravity="end"
            android:layout_marginVertical="25sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/icon_checkmark_circle" />

    </LinearLayout> <!-- recovery setup-->

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/recoveryL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recoveryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/answer_recovery_questions"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/recoveryQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/recovery_noquestion_error"
            android:labelFor="@id/recoveryET1"
            tools:text="Question 1 should be here" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoveryET1"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />

        <TextView
            android:id="@+id/recoveryQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/recovery_noquestion_error"
            android:labelFor="@id/recoveryET2"
            tools:text="Question 2 should be here" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoveryET2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />

        <TextView
            android:text="@string/recovery_noquestion_error"
            android:labelFor="@id/recoveryET3"
            android:id="@+id/recoveryQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            tools:text="Question 3 should be here" />

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/recoveryET3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="5sp" />


        <Button
            android:contentDescription="@string/enter"
            android:id="@+id/recoveryButton"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_gravity="end"
            android:layout_marginVertical="25sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/icon_checkmark_circle" />

    </LinearLayout> <!-- recovery -->


    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="25sp" />

</LinearLayout>